Fixes #19487: Directive details display is broken if the name of a directive is too long.

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
@@ -115,6 +115,9 @@
   margin: 0;
   font-size: 26px;
 }
+.rudder-template .header-buttons {
+  white-space: nowrap;
+}
 .rudder-template .header-buttons .btn {
   margin-left: 10px;
 }
